--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "transformIgnorePatterns": ["node_modules/(?!axios)/"]
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
