--- a/Server/package.json
+++ b/Server/package.json
@@ -13,12 +13,14 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.7",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
