--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,8 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
     "@types/react-router-dom": "^5.3.3",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
   
 }
