--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
+    "react-bootstrap-icons": "^1.11.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
@@ -26,7 +28,9 @@
     "eject": "react-scripts eject"
   },
   "jest": {
-    "transformIgnorePatterns": ["node_modules/(?!axios)/"]
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)/"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -47,10 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@testing-library/react": "^14.2.1",
     "@types/react-router-dom": "^5.3.3",
-    "jest": "^27.5.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "jest": "^27.5.1"
   }
-  
 }
