--- a/Server/package.json
+++ b/Server/package.json
@@ -15,15 +15,18 @@
     "express-session": "^1.18.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "supertest-session": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/jest": "^29.5.11",
-    "@types/multer": "^1.4.11",
     "@types/mongodb-memory-server": "^2.3.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.7",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
